--- a/test5/index.html
+++ b/test5/index.html
@@ -13,6 +13,9 @@
                 <th>Serializer</th>
                 <th>Encoding time</th>
                 <th>Decoding time</th>
+                <th>Original data size (JSON)</th>
+                <th>Encoded data size (byte array)</th>
+                <th>Encoded data size (base-64 utf-8 encoded)</th>
             </tr>
         </thead>
 
